# sklearn_lite

./: .gitignore  README.md  pyproject.toml  setup.py
sklearn/: __init__.py  _min_dependencies.py  common.py  meson.build  metrics.py  model_selection.py
